test: rewrite the findings file each run instead of appending to it
CREATE+APPEND meant every re-run stacked another copy of the same findings
on top of the last, so FDRInput.findings.txt claimed four identical errors
where the run had found one, and a genuinely new finding was
indistinguishable from an echo of an old one. The file is now written in
one go, and removed when a module comes back clean so a stale file cannot
outlive the problem it described.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>